--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mui/icons-material": "^5.15.9",
+    "@mui/material": "^5.15.9",
     "@react-spring/parallax": "^9.7.3",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-material-ui-carousel": "^3.4.2",
     "react-page-scroller": "^3.0.1",
     "sass": "^1.70.0"
   },
